--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--兼容IE浏览器-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--引入reset.css 清除元素默认效果-->
-    <link rel="stylesheet" href="./css/reset.css">
+    <!--<link rel="stylesheet" href="./css/reset.css">-->
     <link rel="stylesheet" href="./css/main.css">
     <!--引入bootstrap css-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -35,13 +35,7 @@
     <!--网页的标题-->
     <title>template</title>
     <style>
-        .logo{width:200px;height:40px;}
-        h3 {border-bottom:2px solid orange;
-            display: inline-block;
-            color: grey;}
-        .pic{width: 365px;height: 270px;}
 
-        h1{ text-align: center}
     </style><!--页内的css-->
     <script>
         //页内的js
@@ -51,53 +45,35 @@
     </script>
 </head>
 <body>
-<h1>个人网站建设中。。。 才开始而已</h1>
-<h1>个人简历</h1>
-<div>
-    <h3>基本信息</h3>
-    <ul>
-        <li>姓名：郁挚一</li>
-        <li>性别：男</li>
-        <li>居住地：上海 浦东</li>
-        <li>学历：本科</li>
-        <li>专业：计算机科学与技术</li>
-        <li>学位：学士学位</li>
-    </ul>
-</div>
-<div>
-    <h3 >工作经历</h3>
-    <ul>
-        <img class="logo" src="images/logo/logo.svg" alt="">
-        <h4>上海美滋数字科技有限公司（天天果园）2016/7 - 2017/7</h4>
-        <li>职位：资深系统运维工程师</li>
-    </ul>
-    <ul><img class="logo" src="images/logo/wlogo.png" alt="">
-        <h4>我厨（上海）科技有限公司 2015/1 -2016/6</h4>
-        <li>职位：系统运维高级工程师</li>
-    </ul>
-    <ul><img class="logo" src="images/logo/boya.jpg" alt="">
-        <h4>博雅软件股份有限公司： 2013/1-2015/1 </h4>
-        <li>职位：系统工程师</li>
-    </ul>
-</div>
+<!--导航条-->
+<div class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">个人页面</a>
+    </div>
 
-<div>
-    <p>通过对AWS上的生产环境Mysql数据库进行索引优化，取消隐式转换，使用程序进行归档等手段</p>
-    <p>在两周内有效降低的数据库的CPU及IO使用</p>
-    <img class="pic" src="images/rds-01.jpg" alt="">
-    <img class="pic" src="images/rds-02.jpg" alt="">
-</div>
 
-<div>
-    <p>搭建VMware虚拟环境，整合多台服务器，存储设备，提高了资源利用率，实现了高可用，</p>
-    <p>在线迁移功能，提高了系统的灵活性</p>
-    <img class="pic" src="images/vcenter-1.png" alt="">
+          <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="resume.html">个人简历</a></li>
+        <li><a href="#">工作亮点</a></li>
+          <li><a href="#">还没想好</a></li>
+           </ul>
+        </div>
+    </div>
 </div>
-<div>
-    <p>使用zabbix监控对系统的各个资源实现全面监控</p>
-    <p>当指标达到阈值时，自动发送告警邮件，或调用公司的短信接口发送短信通知</p>
-    <img class="pic" src="images/zabbix-dashboard.png" alt="">
-    <img class="pic" src="images/zabbix-detail.png" alt="">
+    <!--巨幕-->
+    <div class="jumbotron">
+  <h1 id="jh1">Hello, world!</h1>
+  <p  id="jp">并没有想好在主页放什么，先填个空挡</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
 </body>
 </html>
