--- a/resume.html
+++ b/resume.html
@@ -10,8 +10,10 @@
     <!--引入reset.css 清除元素默认效果-->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/resume.css">
     <!--引入bootstrap css-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <!--引入jquery-->
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
@@ -35,13 +37,7 @@
     <!--网页的标题-->
     <title>template</title>
     <style>
-        .logo{width:200px;height:40px;}
-        h3 {border-bottom:2px solid orange;
-            display: inline-block;
-            color: grey;}
-        .pic{width: 365px;height: 270px;}
 
-        h1{ text-align: center}
     </style><!--页内的css-->
     <script>
         //页内的js
@@ -51,54 +47,137 @@
     </script>
 </head>
 <body>
-<a href="index.html">回首页</a>
-<h1>个人简历书写中。。。 才开始而已</h1>
-<h1>个人简历</h1>
-<div>
-    <h3>基本信息</h3>
-    <ul>
-        <li>姓名：郁挚一</li>
-        <li>性别：男</li>
-        <li>居住地：上海 浦东</li>
-        <li>学历：本科</li>
-        <li>专业：计算机科学与技术</li>
-        <li>学位：学士学位</li>
-    </ul>
+<!--导航条-->
+<div class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">个人页面</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="resume.html">个人简历</a></li>
+                <li><a href="#">工作亮点</a></li>
+                <li><a href="#">还没想好</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
-<div>
-    <h3 >工作经历</h3>
-    <ul>
-        <img class="logo" src="images/logo/logo.svg" alt="">
-        <h4>上海美滋数字科技有限公司（天天果园）2016/7 - 2017/7</h4>
-        <li>职位：资深系统运维工程师</li>
-    </ul>
-    <ul><img class="logo" src="images/logo/wlogo.png" alt="">
-        <h4>我厨（上海）科技有限公司 2015/1 -2016/6</h4>
-        <li>职位：系统运维高级工程师</li>
-    </ul>
-    <ul><img class="logo" src="images/logo/boya.jpg" alt="">
-        <h4>博雅软件股份有限公司： 2013/1-2015/1 </h4>
-        <li>职位：系统工程师</li>
-    </ul>
+<!--个人简历标题-->
+<div class="container-fluid">
+    <h3>建设中。。。</h3>
+    <h1 class="text-center">个人简历</h1>
+    <h2 class="text-right">郁挚一</h2>
+    <h4 class="text-right">求职意向：运维开发工程师</h4>
+</div>
+<!--个人基本信息-->
+<br>
+<div class="container-fluid">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">
+                <span class="glyphicon glyphicon-user"></span>
+                个人基本信息
+            </h2>
+        </div>
+        <div class="panel-body">
+            <div class="pull-left">
+                <div><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 上海市 浦东新区</div>
+                <br>
+                <div><span class="glyphicon glyphicon-envelope"></span> 81784779@qq.com</div>
+                <br>
+                <p><i class="icon-link"></i> 81784779</p><br>
+                <p><i class="icon-github"></i> https://github.com/luciferYu</p><br>
+            </div>
+            <div class="pull-right">
+                <img  src="images/idphoto.jpg" class="img-rounded img-responsive" alt="证件照">
+            </div>
+        </div>
+    </div>
 </div>
 
-<div>
-    <p>通过对AWS上的生产环境Mysql数据库进行索引优化，取消隐式转换，使用程序进行归档等手段</p>
-    <p>在两周内有效降低的数据库的CPU及IO使用</p>
-    <img class="pic" src="images/rds-01.jpg" alt="">
-    <img class="pic" src="images/rds-02.jpg" alt="">
+
+<!--技能简介-->
+<div class="container-fluid">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">
+                <i class="icon-cog"></i>
+                技能简介
+            </h2>
+        </div>
+        <div class="panel-body">
+            面板内容
+        </div>
+    </div>
 </div>
 
-<div>
-    <p>搭建VMware虚拟环境，整合多台服务器，存储设备，提高了资源利用率，实现了高可用，</p>
-    <p>在线迁移功能，提高了系统的灵活性</p>
-    <img class="pic" src="images/vcenter-1.png" alt="">
+<!--工作履历-->
+<div class="container-fluid">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">
+                <i class="icon-laptop"></i>
+                工作履历
+            </h2>
+        </div>
+        <div class="panel-body">
+            面板内容
+        </div>
+    </div>
 </div>
-<div>
-    <p>使用zabbix监控对系统的各个资源实现全面监控</p>
-    <p>当指标达到阈值时，自动发送告警邮件，或调用公司的短信接口发送短信通知</p>
-    <img class="pic" src="images/zabbix-dashboard.png" alt="">
-    <img class="pic" src="images/zabbix-detail.png" alt="">
+
+<!--教育经历-->
+<div class="container-fluid">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">
+                <i class="icon-book"></i>
+                教育经历
+            </h2>
+        </div>
+        <div class="panel-body">
+            面板内容
+        </div>
+    </div>
 </div>
+
+<!--证书-->
+<div class="container-fluid">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">
+                <i class="icon-certificate"></i>
+                证书
+            </h2>
+        </div>
+        <div class="panel-body">
+            面板内容
+        </div>
+    </div>
+</div>
+<!--荣誉-->
+<div class="container-fluid">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">
+                <i class="icon-trophy"> </i>
+                荣誉
+            </h2>
+        </div>
+        <div class="panel-body">
+            面板内容
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
