--- a/resume.html
+++ b/resume.html
@@ -127,7 +127,7 @@
         </div>
         <div id="collapseTwo" class="panel-collapse collapse">
             <div class="panel-body">
-                <table>
+                <table class="table table-striped">
                     <tr>
                         <td>后端开发：</td>
                         <td>熟悉Python语言，熟悉Django web MTV框架 Scrapy 爬虫框架，</td>
@@ -227,7 +227,22 @@
         </div>
         <div id="collapseFour" class="panel-collapse collapse">
             <div class="panel-body">
-                面板内容
+                <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>学校</th>
+                            <th>专业</th>
+                            <th>日期</th>
+                            <th>备注</th>
+                        </tr></thead>
+                        <tbody>
+                        <tr>
+                            <td>中央广播电视大学</td>
+                            <td>本科-计算机科学与技术</td>
+                            <td>2012/3-2014/7</td>
+                            <td>毕业时获北京交通大学工学学士学位</td>
+                        </tr></tbody>
+                    </table>
             </div>
         </div>
     </div>
@@ -247,7 +262,7 @@
         </div>
         <div id="collapseFive" class="panel-collapse collapse">
             <div class="panel-body">
-                <table>
+                <table class="table table-striped">
                     <thead>
                     <tr>
                         <th>证书名称</th>
@@ -312,7 +327,7 @@
         </div>
         <div id="collapseSix" class="panel-collapse collapse">
             <div class="panel-body">
-                <table>
+                <table class="table table-striped">
                     <tbody>
                     <tr>
                         <td><a href="#modalcxyj" data-toggle="modal">上海开放大学创新研究项目一等奖</a></td>
