--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- <script type="text/javascript" src="js/yourjs.js"></script> -->
 
     <!--网页的标题-->
-    <title>template</title>
+    <title>个人主页</title>
     <style>
 
     </style><!--页内的css-->
@@ -62,17 +62,27 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="resume.html">个人简历</a></li>
-        <li><a href="#">工作亮点</a></li>
-          <li><a href="#">还没想好</a></li>
+        <li><a href="#">个人博客</a></li>
+          <li><a href="#">兴趣爱好</a></li>
            </ul>
         </div>
     </div>
 </div>
     <!--巨幕-->
     <div class="jumbotron">
-  <h1 id="jh1">Hello, world!</h1>
+      <div><h1 id="jh1">Hello, world!</h1>
   <p  id="jp">并没有想好在主页放什么，先填个空挡</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p></div>
+
 </div>
+
+<!--个人介绍-->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6"><img class="img-responsive" src="images/persondesc/NotreDamedeParis.JPG" alt=""></div>
+        <div class="col-lg-6"><img class="img-responsive" src="images/persondesc/titlis.JPG" alt=""></div>
+    </div>
+</div>
+
 </body>
 </html>
